--- a/examples/chart/teleport-demo/docker/cloudflare-agent/Dockerfile
+++ b/examples/chart/teleport-demo/docker/cloudflare-agent/Dockerfile
@@ -1,5 +1,5 @@
 ARG TELEPORT_VERSION
-FROM quay.io/gravitational/debian-grande:latest
+FROM gcr.io/kubeadm-167321/debian-grande:latest
 
 ARG KUBECTL_VERSION="v1.12.5"
 ARG CURL_OPTS="-L --retry 100 --retry-delay 0 --connect-timeout 10 --max-time 300"
