--- a/examples/chart/teleport-demo/docker/cloudflare-agent/Dockerfile
+++ b/examples/chart/teleport-demo/docker/cloudflare-agent/Dockerfile
@@ -3,6 +3,7 @@ FROM gcr.io/kubeadm-167321/debian-grande:latest
 
 ARG KUBECTL_VERSION="v1.12.5"
 ARG CURL_OPTS="-L --retry 100 --retry-delay 0 --connect-timeout 10 --max-time 300"
+ARG PATH="/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin"
 
 # Update packages
 ENV DEBIAN_FRONTEND noninteractive
